Add detail endpoint for StockItemAttachment

--- a/InvenTree/stock/templates/stock/item_attachments.html
+++ b/InvenTree/stock/templates/stock/item_attachments.html
@@ -61,12 +61,18 @@ $("#new-attachment").click(function() {
 $("#attachment-table").on('click', '.attachment-edit-button', function() {
     var button = $(this);
 
-    var url = `/stock/item/attachment/${button.attr('pk')}/edit/`;
+    var pk = button.attr('pk');
 
-    launchModalForm(url, 
-        {
-            reload: true,
-        });
+    var url = `/api/stock/attachment/${pk}/`;
+
+    constructForm(url, {
+        fields: {
+            attachment: {},
+            comment: {},
+        },
+        title: '{% trans "Edit Attachment" %}',
+        reload: true 
+    });
 });
 
 $("#attachment-table").on('click', '.attachment-delete-button', function() {
