--- a/InvenTree/order/templates/order/so_attachments.html
+++ b/InvenTree/order/templates/order/so_attachments.html
@@ -72,9 +72,12 @@ $("#attachment-table").on('click', '.attachment-edit-button', function() {
 $("#attachment-table").on('click', '.attachment-delete-button', function() {
     var button = $(this);
 
-    var url = `/order/sales-order/attachment/${button.attr('pk')}/delete/`;
+    var pk = button.attr('pk');
 
-    launchModalForm(url, {
+    constructForm(`/api/order/so/attachment/${pk}/`, {
+        method: 'DELETE',
+        confirmMessage: '{% trans "Confirm Delete Operation" %}',
+        title: '{% trans "Delete Attachment" %}',
         reload: true,
     });
 });
