Refactor delete view for PartAttachment and StockItemAttachment

--- a/InvenTree/stock/templates/stock/item_attachments.html
+++ b/InvenTree/stock/templates/stock/item_attachments.html
@@ -73,12 +73,15 @@ $("#attachment-table").on('click', '.attachment-edit-button', function() {
 $("#attachment-table").on('click', '.attachment-delete-button', function() {
     var button = $(this);
 
-    var url = `/stock/item/attachment/${button.attr('pk')}/delete/`;
+    var pk = button.attr('pk');
 
-    launchModalForm(url, {
-        success: function() {
-            location.reload();
-        }
+    var url = `/api/stock/attachment/${pk}/`;
+
+    constructForm(url, {
+        method: 'DELETE',
+        confirmMessage: '{% trans "Confirm Delete Operation" %}',
+        title: '{% trans "Delete Attachment" %}',
+        reload: true,
     });
 });
 
