--- a/InvenTree/part/templates/part/attachments.html
+++ b/InvenTree/part/templates/part/attachments.html
@@ -72,13 +72,14 @@
 
     $("#attachment-table").on('click', '.attachment-delete-button', function() {
         var button = $(this);
+        var pk = button.attr('pk');
+        var url = `/api/part/attachment/${pk}/`;
 
-        var url = `/part/attachment/${button.attr('pk')}/delete/`;
-
-        launchModalForm(url, {
-            success: function() {
-                location.reload();
-            }
+        constructForm(url, {
+            method: 'DELETE',
+            confirmMessage: '{% trans "Confirm Delete Operation" %}',
+            title: '{% trans "Delete Attachment" %}',
+            reload: true,
         });
     });
 
