--- a/InvenTree/company/templates/company/supplier_part_pricing.html
+++ b/InvenTree/company/templates/company/supplier_part_pricing.html
@@ -46,23 +46,25 @@ $('#price-break-table').inventreeTable({
         table.find('.button-price-break-delete').click(function() {
             var pk = $(this).attr('pk');
 
-            launchModalForm(
-                `/price-break/${pk}/delete/`,
-                {
-                    success: reloadPriceBreaks
-                }
-            );
+            constructForm(`/api/company/price-break/${pk}/`, {
+                method: 'DELETE',
+                onSuccess: reloadPriceBreaks,
+                title: '{% trans "Delete Price Break" %}',
+            });
         });
 
         table.find('.button-price-break-edit').click(function() {
             var pk = $(this).attr('pk');
 
-            launchModalForm(
-                `/price-break/${pk}/edit/`,
-                {
-                    success: reloadPriceBreaks
-                }
-            );
+            constructForm(`/api/company/price-break/${pk}/`, {
+                fields: {
+                    quantity: {},
+                    price: {},
+                    price_currency: {},
+                },
+                onSuccess: reloadPriceBreaks,
+                title: '{% trans "Edit Price Break" %}',
+            });
         });
     },
     columns: [
@@ -114,7 +116,7 @@ $('#new-price-break').click(function() {
                 },
             },
             title: '{% trans "Add Price Break" %}',
-            reload: true
+            onSuccess: reloadPriceBreaks,
         }
     );
 });
