--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -149,6 +149,7 @@
 
 <!-- translated -->
 <script type='text/javascript' src="{% i18n_static 'api.js' %}"></script>
+<script type='text/javascript' src="{% i18n_static 'attachment.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'forms.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'model_renderers.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'barcode.js' %}"></script>
