--- a/InvenTree/part/templates/part/attachments.html
+++ b/InvenTree/part/templates/part/attachments.html
@@ -19,6 +19,36 @@
 {% block js_ready %}
 {{ block.super }}
 
+    loadAttachmentTable(
+        '{% url "api-part-attachment-list" %}',
+        {
+            filters: {
+                part: {{ part.pk }},
+            },
+            onEdit: function(pk) {
+                var url = `/api/part/attachment/${pk}/`;
+
+                constructForm(url, {
+                    fields: {
+                        comment: {},
+                    },
+                    title: '{% trans "Edit Attachment" %}',
+                    onSuccess: reloadAttachmentTable,
+                });
+            },
+            onDelete: function(pk) {
+                var url = `/api/part/attachment/${pk}/`;
+
+                constructForm(url, {
+                    method: 'DELETE',
+                    confirmMessage: '{% trans "Confirm Delete Operation" %}',
+                    title: '{% trans "Delete Attachment" %}',
+                    onSuccess: reloadAttachmentTable,
+                });
+            }
+        }
+    );
+
     enableDragAndDrop(
         '#attachment-dropzone',
         '{% url "api-part-attachment-list" %}',
@@ -28,7 +58,7 @@
             },
             label: 'attachment',
             success: function(data, status, xhr) {
-                location.reload();
+                reloadAttachmentTable();
             }
         }
     );
@@ -47,43 +77,10 @@
                         hidden: true,
                     }
                 },
-                reload: true,
+                onSuccess: reloadAttachmentTable,
                 title: '{% trans "Add Attachment" %}',
             }
         )
-    });
-
-    $("#attachment-table").on('click', '.attachment-edit-button', function() {
-        var button = $(this);
-
-        var pk = button.attr('pk');
-
-        var url = `/api/part/attachment/${pk}/`;
-
-        constructForm(url, {
-            fields: {
-                attachment: {},
-                comment: {},
-            },
-            title: '{% trans "Edit Attachment" %}',
-            reload: true,
-        });
-    });
-
-    $("#attachment-table").on('click', '.attachment-delete-button', function() {
-        var button = $(this);
-        var pk = button.attr('pk');
-        var url = `/api/part/attachment/${pk}/`;
-
-        constructForm(url, {
-            method: 'DELETE',
-            confirmMessage: '{% trans "Confirm Delete Operation" %}',
-            title: '{% trans "Delete Attachment" %}',
-            reload: true,
-        });
-    });
-
-    $("#attachment-table").inventreeTable({
     });
 
 {% endblock %}
