Refactor deletion of multiple manufacturer part objects
- issues multiple DELETE requests via the API

--- a/InvenTree/part/templates/part/bom.html
+++ b/InvenTree/part/templates/part/bom.html
@@ -123,8 +123,8 @@
                     });
 
                     // Wait for *all* the requests to complete
-                    $.when.apply($, requests).then(function() {
-                        $('#bom-table').bootstrapTable('refresh');
+                    $.when(requests).then(function() {
+                        location.reload();
                     });
                 }
             }
