Add ability to delete multiple selected manufacturer part parameters

--- a/InvenTree/part/templates/part/bom.html
+++ b/InvenTree/part/templates/part/bom.html
@@ -123,7 +123,7 @@
                     });
 
                     // Wait for *all* the requests to complete
-                    $.when(requests).then(function() {
+                    $.when.apply($, requests).then(function() {
                         location.reload();
                     });
                 }
