--- a/InvenTree/company/templates/company/manufacturer_part_suppliers.html
+++ b/InvenTree/company/templates/company/manufacturer_part_suppliers.html
@@ -42,8 +42,11 @@
                 <button class='btn btn-success' id='parameter-create'>
                     <span class='fas fa-plus-circle'></span> {% trans "New Parameter" %}
                 </button>
-                <div id='param-dropdown' class='btn-group'>
-                    <!-- TODO -->
+                <div id='opt-dropdown' class="btn-group">
+                    <button id='parameter-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href='#' id='multi-parameter-delete' title='{% trans "Delete parameters" %}'>{% trans "Delete" %}</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -115,6 +118,46 @@ $("#supplier-part-delete").click(function() {
     });
 });
 
+$("#multi-parameter-delete").click(function() {
+
+    var selections = $("#parameter-table").bootstrapTable("getSelections");
+
+    var text = `
+    <div class ='alert alert-block alert-danger'>
+        <p>{% trans "Selected parameters will be deleted" %}:</p>
+        <ul>`;
+
+    selections.forEach(function(item) {
+        text += `<li>${item.name} - <i>${item.value}</i></li>`;
+    });
+
+    text += `
+        </ul>
+    </div>`;
+    
+    showQuestionDialog(
+        '{% trans "Delete Parameters" %}',
+        text,
+        {
+            accept_text: '{% trans "Delete" %}',
+            accept: function() {
+                // Delete each parameter via the API
+                var requests = [];
+
+                selections.forEach(function(item) {
+                    var url = `/api/company/part/manufacturer/parameter/${item.pk}/`;
+
+                    requests.push(inventreeDelete(url));
+                });
+
+                $.when.apply($, requests).then(function() {
+                    $('#parameter-table').bootstrapTable('refresh');
+                });
+            }
+        }
+    );
+});
+
 loadSupplierPartTable(
     "#supplier-table",
     "{% url 'api-supplier-part-list' %}",
@@ -140,5 +183,5 @@ loadManufacturerPartParameterTable(
 );
 
 linkButtonsToSelection($("#supplier-table"), ['#supplier-part-options'])
-
+linkButtonsToSelection($("#parameter-table"), ['#parameter-options'])
 {% endblock %}
