Specify 'default' functions for 'reference' field in SalesOrder and PurchaseOrder
- Refactor CreatePurchaseOrder form
- Some migrations

--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -115,15 +115,10 @@
     });
 
     $("#company-order-2").click(function() {
-        launchModalForm("{% url 'po-create' %}",
-        {
-            data: {
-                supplier: {{ company.id }},
-            },
-            follow: true,
+        createPurchaseOrder({
+            supplier: {{ company.pk }},
         });
     });
-
 
     $('#company-delete').click(function() {
         constructForm('{% url "api-company-detail" company.pk %}', {
