--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -176,18 +176,7 @@ $("#order-print").click(function() {
 })
 
 $("#po-create").click(function() {
-    launchModalForm("{% url 'po-create' %}",
-        {
-            follow: true,
-            secondary: [
-                {
-                    field: 'supplier',
-                    label: '{% trans "New Supplier" %}',
-                    title: '{% trans "Create new Supplier" %}',
-                }
-            ]
-        }
-    );
+    createPurchaseOrder();
 });
 
 loadPurchaseOrderTable("#purchase-order-table", {
