--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -178,18 +178,7 @@ $("#order-print").click(function() {
 })
 
 $("#so-create").click(function() {
-    launchModalForm("{% url 'so-create' %}",
-        {
-            follow: true,
-            secondary: [
-                {
-                    field: 'customer',
-                    label: '{% trans "New Customer" %}',
-                    title: '{% trans "Create new Customer" %}',
-                }
-            ]
-        }
-    );
+    createSalesOrder();
 });
 
 {% endblock %}
