--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -369,6 +369,75 @@
     });
 
     $("#part-edit").click(function() {
+
+        constructForm('{% url "api-part-detail" part.id %}', {
+            focus: 'name',
+            fields: {
+                category: {
+                    secondary: {
+                        label: '{% trans "New Category" %}',
+                        title: '{% trans "Create New Part Category" %}',
+                        api_url: '{% url "api-part-category-list" %}',
+                        method: 'POST',
+                        fields: {
+                            name: {},
+                            description: {},
+                            parent: {
+                                secondary: {
+                                    title: '{% trans "New Parent" %}',
+                                    api_url: '{% url "api-part-category-list" %}',
+                                    method: 'POST',
+                                    fields: {
+                                        name: {},
+                                        description: {},
+                                        parent: {},
+                                    }
+                                }
+                            },
+                        }
+                    },
+                },
+                name: {
+                    placeholder: 'part name',
+                },
+                IPN: {},
+                description: {},
+                revision: {},
+                keywords: {
+                    icon: 'fa-key',
+                },
+                variant_of: {},
+                link: {
+                    icon: 'fa-link',
+                },
+                default_location: {
+                    secondary: {
+                        label: '{% trans "New Location" %}',
+                        title: '{% trans "Create new stock location" %}',
+                        
+                    },
+                },
+                default_supplier: {
+                    filters: {
+                        part: {{ part.pk }},
+                        part_detail: true,
+                        manufacturer_detail: true,
+                        supplier_detail: true,
+                    },
+                    secondary: {
+                        label: '{% trans "New Supplier Part" %}',
+                        title: '{% trans "Create new supplier part" %}',
+                    }
+                },
+                units: {},
+                minimum_stock: {},
+            },
+            title: '{% trans "Edit Part" %}',
+            reload: true,
+        });
+
+        return;
+
         launchModalForm(
             "{% url 'part-edit' part.id %}",
             {
