Refactoring forms for order line items
- Required some fixes for money serializer
-

--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -377,16 +377,26 @@ function setupCallbacks() {
 
         var pk = $(this).attr('pk');
 
-        launchModalForm(`/order/sales-order/line/${pk}/edit/`, {
-            success: reloadTable,
+        constructForm(`/api/order/so-line/${pk}/`, {
+            fields: {
+                quantity: {},
+                reference: {},
+                sale_price: {},
+                sale_price_currency: {},
+                notes: {},
+            },
+            title: '{% trans "Edit Line Item" %}',
+            onSuccess: reloadTable,
         });
     });
 
     table.find(".button-delete").click(function() {
         var pk = $(this).attr('pk');
 
-        launchModalForm(`/order/sales-order/line/${pk}/delete/`, {
-            success: reloadTable,
+        constructForm(`/api/order/so-line/${pk}/`, {
+            method: 'DELETE',
+            title: '{% trans "Delete Line Item" %}',
+            onSuccess: reloadTable,
         });
     });
 
