show supplier_part in stock-table #1323

--- a/InvenTree/part/templates/part/stock.html
+++ b/InvenTree/part/templates/part/stock.html
@@ -41,6 +41,7 @@
             part: {{ part.id }},
             location_detail: true,
             part_detail: false,
+            supplier_part_detail: true,
         },
         groupByField: 'location',
         buttons: [
