updating format to new API

--- a/InvenTree/order/templates/order/sales_order_base.html
+++ b/InvenTree/order/templates/order/sales_order_base.html
@@ -184,6 +184,8 @@ $("#edit-order").click(function() {
             },
             {% endif %}
             description: {},
+            sell_price: {},
+            sell_price_currency: {},
             target_date: {
                 icon: 'fa-calendar-alt',
             },
